fixed seller avatar on mobile devices

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5301,10 +5301,6 @@ textarea[cols] {
     margin-bottom: 20px;
   }
 
-  .banner-1 img {
-    height: 18.6rem;
-  }
-
   .bannerimg img {
     height: 10rem;
   }
